[gd_scene load_steps=10 format=3 uid="uid://c21u2abul5ga1"]

[ext_resource type="Script" path="res://Scripts/Chaos/fire_tree.gd" id="1_ki5cj"]
[ext_resource type="Texture2D" uid="uid://bncinem4im3j6" path="res://art/world/Props/Tree_Apples_02.PNG" id="2_rs20t"]
[ext_resource type="Script" path="res://Scripts/SetRandomSprite.gd" id="3_dveex"]
[ext_resource type="Texture2D" uid="uid://m4ug06o5kbwi" path="res://art/world/Props/Tree_Apples.PNG" id="4_0f0vi"]
[ext_resource type="Texture2D" uid="uid://b5fw6vi8bm0q6" path="res://art/world/Props/Tree_03.PNG" id="5_obpww"]
[ext_resource type="PackedScene" uid="uid://cbycy8bbyocpe" path="res://Scenes/Clicking/clickable.tscn" id="6_1lgff"]
[ext_resource type="Script" path="res://Scripts/Chaos/chaos_triggerable.gd" id="7_vg2t8"]
[ext_resource type="PackedScene" uid="uid://dymkfwg58tqik" path="res://Scenes/Chaos/damage_area.tscn" id="8_xq26l"]
[ext_resource type="PackedScene" uid="uid://gqq7aoxosrop" path="res://art/fire/fire_anim.tscn" id="9_6uevv"]

[node name="FireTree_Apples" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ki5cj")
fire_color = Color(1, 0.584314, 0.596078, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("2_rs20t")
offset = Vector2(0, -52.435)
script = ExtResource("3_dveex")
sprites = Array[Texture2D]([ExtResource("4_0f0vi"), ExtResource("5_obpww")])

[node name="Clickable" parent="." instance=ExtResource("6_1lgff")]
position = Vector2(2, -48)
scale = Vector2(1.18828, 1.89487)
pointer_state = 1
clicking_is_enabled = false

[node name="ChaosTriggerable" type="Node" parent="."]
script = ExtResource("7_vg2t8")
trigger_probability = 0.02
cooldown_time = 15.0

[node name="DamageArea" parent="." instance=ExtResource("8_xq26l")]
position = Vector2(2, -44)
scale = Vector2(4, 6.959)

[node name="FireNode" type="Node2D" parent="."]
visible = false

[node name="Fire" parent="FireNode" instance=ExtResource("9_6uevv")]
position = Vector2(-15, -9)

[node name="Fire01" parent="FireNode/Fire" index="0"]
self_modulate = Color(1, 1, 1, 0.862745)
position = Vector2(-9, -47)
rotation = -0.221647
scale = Vector2(0.54823, 0.54823)

[node name="Fire2" parent="FireNode" instance=ExtResource("9_6uevv")]
position = Vector2(10, -13)

[node name="Fire01" parent="FireNode/Fire2" index="0"]
self_modulate = Color(1, 1, 1, 0.870588)
position = Vector2(14, -29)
rotation = 0.0262352
scale = Vector2(0.413579, 0.413579)

[node name="Fire3" parent="FireNode" instance=ExtResource("9_6uevv")]
position = Vector2(-15, -8)

[node name="Fire01" parent="FireNode/Fire3" index="0"]
self_modulate = Color(1, 1, 1, 0.870588)
position = Vector2(11, -76)
rotation = 0.0262352
scale = Vector2(0.217845, 0.217845)
flip_h = true

[node name="Fire4" parent="FireNode" instance=ExtResource("9_6uevv")]
position = Vector2(8, 1)
rotation = 0.092119

[node name="Fire01" parent="FireNode/Fire4" index="0"]
self_modulate = Color(1, 1, 1, 0.870588)
position = Vector2(11, -76)
rotation = 0.0262352
scale = Vector2(0.217845, 0.217845)
flip_h = true

[connection signal="on_clicked" from="Clickable" to="." method="_on_clickable_on_clicked"]
[connection signal="trigger_chaos" from="ChaosTriggerable" to="." method="_on_node_trigger_chaos"]

[editable path="FireNode/Fire"]
[editable path="FireNode/Fire2"]
[editable path="FireNode/Fire3"]
[editable path="FireNode/Fire4"]
